# RAID

./: .cursorrules  Cargo.toml  README.md  raid.yaml  system_checks.db
src/: ai.rs  cli.rs  config.rs  database.rs  known_issues.rs  lib.rs  main.rs  main_broken.rs  main_old.rs  output.rs  sysinfo.rs  ui.rs
src/commands/: ai.rs  config.rs  debug.rs  mod.rs
src/output/: mod.rs  printers.rs
src/tools/: arch_debug.rs  container_info.rs  ebpf_debug.rs  journalctl.rs  kubectl.rs  kubernetes_debug.rs  mod.rs  network_debug.rs  performance_debug.rs  process_debug.rs  security_debug.rs  storage_debug.rs  system_info.rs  systemctl.rs
tests/: integration_tests.rs
