[package]
name = "raid"
version = "0.1.0"
edition = "2024"
description = "Rust Analysis and Informative Debugger - AI-powered system health checker"

[dependencies]
async-trait = "0.1.88"
clap = { version = "4.5.40", features = ["env", "derive"] }
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
regex = "1.10.4"
colored = "2.1.0"
indicatif = "0.17.8"
config = "0.14.0"
toml = "0.8.0"
dirs = "5.0.1"

[dev-dependencies]
tempfile = "3.8.0"

